--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -113,7 +113,9 @@ duoshuo_count: false
 # 使用 disqus 时关闭多说评论
 disqus_shortname: false
 # 是否开启友言评论, 填写友言用户id
-uyan_uid: 2128666
+uyan_uid: false #2128666
+# 是否开启网易云跟帖， 填写app sdk中的app key
+wangyi: 21de79f8e60a4b909c19083ce1c9e2d3
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
