--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -40,6 +40,10 @@ rss: /atom.xml
 
 # 你的头像url
 avatar: /img/avatar.jpg
+# avatar link
+avatar_link: /
+# 头像背景图
+brand: /img/brand.jpg
 # favicon
 favicon: /img/avatar.jpg
 
@@ -85,7 +89,7 @@ toc:
   list_number: true  # 是否显示数字排序
 
 # 文章页版权声明内容，hexo中所有变量及辅助函数等均可调用，具体请查阅 hexo.io
-copyright: 本文链接：<a href="<%- url_for(page.path).replace(/index\.html$/, '') %>" target="_blank" rel="external"><%- url.replace(/index\.html$/, '') %></a><br><span>博客内容遵循 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">知识共享 署名 - 非商业性 - 相同方式共享 4.0协议</a></span>
+postMessage: 本文链接：<a href="<%- url_for(page.path).replace(/index\.html$/, '') %>" target="_blank" rel="external"><%- url.replace(/index\.html$/, '') %></a><br><span>博客内容遵循 <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">知识共享 署名 - 非商业性 - 相同方式共享 4.0协议</a></span>
 
 # 站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
 cnzz: false
@@ -106,16 +110,17 @@ less:
   paths:
     - source/css/style.less
 
-# 是否开启多说评论，填写你在多说创建的站点二级域名
-duoshuo: false
-# 是否开启多说评论计数（该服务不稳定）
-duoshuo_count: false
-# 使用 disqus 时关闭多说评论
+# 以下评论插件开启一个即可
+# 是否开启 disqus
 disqus_shortname: false
 # 是否开启友言评论, 填写友言用户id
-uyan_uid: false #2128666
-# 是否开启网易云跟帖， 填写app sdk中的app key
-wangyi: 21de79f8e60a4b909c19083ce1c9e2d3
+uyan_uid: false
+# 是否使用 gitment，https://github.com/imsun/gitment
+gitment:
+  owner: ystyle
+  repo: ystyle.github.io
+  client_id: 1f887c79a8b9b9fbec12
+  client_secret: 05033003da5f8a5809b903806420690a665b0ea0
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
@@ -139,3 +144,11 @@ about: Programmers are worthy of respect, the hands of programmers is the magici
 title_change:
   normal: 欢迎回来╮(╯▽╰)╭
   leave: 东方星痕的博客
+# 设置为 true 发布后将使用 unpkg cdn
+cdn: true
+
+# 设置为 true 将使用 lightbox render 图片
+lightbox: true
+
+# icp备案号  ICP_license: 京ICP备1234556号-1
+ICP_license: false
