--- a/_config.yml
+++ b/_config.yml
@@ -69,4 +69,4 @@ theme: indigo
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:ystyle/ystyle.github.io.git
+  repo: https://gh_token@github.com/ystyle/ystyle.github.io.git
