--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,7 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+skip_render: README.md
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
