--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,5 +24,5 @@ jobs:
         run: |
           git config user.name "ystyle"
           git config user.email "lxy5266@live.com"
-          sed -i "s/gh_token/${{ secrets.ACCESS_TOKEN }}/g" ./_config.yml
+          sed -i "s/gh_token/${secrets.ACCESS_TOKEN}/g" ./_config.yml
           hexo deploy
