--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,9 +23,9 @@ jobs:
           hexo clean
           hexo g
       - name: 5. publish
-        uses: heowc/action-hexo@main
-        env:
-          EMAIL: lxy5266@live.com
-          NAME: ystyle
-        with:
-          args: master
+        uses: solybum/hexo-deploy@master
+          env:
+            PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            PUBLISH_REPOSITORY: ystyle/ystyle.github.io # The repository the action should deploy to.
+            BRANCH: master  # The branch the action should deploy to.
+            PUBLISH_DIR: ./public # The folder the action should deploy.
