--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,9 @@ jobs:
         uses: actions/checkout@v2
       - name: 2. setup nodejs...
         uses: actions/setup-node@v2
-        with:
-          node-version: '7.9.0'
       - name: 3. install hexo...
         run: |
-          npm install hexo-cli@4.2.0 -g
+          npm install hexo-cli -g
           npm install
       - name: 4. hexo generate public files...
         run: |
