--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
           PUBLISH_REPOSITORY: ystyle/ystyle.github.io # The repository the action should deploy to.
           BRANCH: master  # The branch the action should deploy to.
           PUBLISH_DIR: ./public # The folder the action should deploy.
-      - name: 6. Fresh Huawei Cloud CDN Cache
+      - name: 6. Refresh Huawei Cloud CDN Cache
         uses: ystyle/hwcdn-cache@master
         env:
           ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID }}
