--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -117,11 +117,11 @@ disqus_shortname: false
 # 是否开启友言评论, 填写友言用户id
 uyan_uid: false
 # 是否使用 gitalk://github.com/gitalk/gitalk
-gitalk: false
-#  owner: ystyle
-#  repo: ystyle.github.io
-#  client_id: 1f887c79a8b9b9fbec12
-#  client_secret: 05033003da5f8a5809b903806420690a665b0ea0
+gitalk: 
+  owner: ystyle
+  repo: ystyle.github.io
+  client_id: 1f887c79a8b9b9fbec12
+  client_secret: 05033003da5f8a5809b903806420690a665b0ea0
 
 # 规范网址
 # 让搜索引擎重定向你的不同域名、不同子域、同域不同目录的站点到你期望的路径
