--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,12 +21,11 @@ jobs:
           hexo clean
           hexo g
       - name: 5. publish
-        uses: solybum/hexo-deploy@master
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_REPOSITORY: ystyle/ystyle.github.io # The repository the action should deploy to.
-          BRANCH: master  # The branch the action should deploy to.
-          PUBLISH_DIR: ./public # The folder the action should deploy.
+        uses: yrpang/github-actions-hexo@v1.3
+        with:
+          deploykey: ${{secrets.DEPLOY_KEY}}
+          username: ystyle
+          email: lxy5266@live.com
       - name: 6. Refresh Huawei Cloud CDN Cache
         uses: ystyle/hwcdn-cache@master
         env:
